# DGMatching

./: .gitignore  CMakeLists.txt  StrMatchConfig.h.in  backwardScan.cpp  deltaBM1.cpp  deltaBM3.cpp  deltaFastSearch.cpp  deltaGammaMatch.cpp  deltaMaximalShift.cpp  deltaTunedBM.cpp  forwardScan.cpp  main.cxx  shiftAnd.cpp  shiftOr.cpp  shiftPlus.cpp  test.cpp
Alphabet/: ACTG.txt  Alphabet.h  CMakeLists.txt  alphabet.cxx  hexAlph.txt
BitwiseAlgos/: BitwiseAlgos.h  CMakeLists.txt  backwardScan.cxx  forwardScan.cxx  shiftAnd.cxx  shiftOr.cxx  shiftPlus.cxx
ClasssicAlgos/: bruteForceDeltaGamma.cxx  deltaSkipSearch.cpp
DeltaBMAlgos/: CMakeLists.txt  DeltaBMAlgos.h  deltaBM1.cxx  deltaBM3.cxx  deltaTunedBM.cxx
FastSearchAlgos/: deltaForwardFastSearch.cpp
MatchingAlgos/: CMakeLists.txt  MatchingAlgos.h  matchingAlgos.cxx
MatchingAlgos/Alphabet/: ACTG.txt  Alphabet.h  abc.txt  alphabet.cxx  hexAlph.txt  qwerty.txt  spelling.txt
MatchingAlgos/BitwiseAlgos/: BitwiseAlgos.h  CMakeLists.txt  backwardScan.cxx  forwardScan.cxx  shiftAnd.cxx  shiftOr.cxx  shiftPlus.cxx
MatchingAlgos/DeltaBMAlgos/: CMakeLists.txt  DeltaBMAlgos.h  deltaBM1.cxx  deltaBM2.cxx  deltaBM3.cxx  deltaFastSearch.cxx  deltaForwardFastSearch.cxx  deltaMaximalShift.cxx  deltaTunedBM.cxx
MatchingAlgos/OccurrenceAlgos/: CMakeLists.txt  OccurrenceAlgos.h  bruteForce.cxx  deltaMaximalShift.cxx  deltaSkipSearch.cxx  intervalSearch.cxx
bfBuild/: bruteForceDGm
exactSuffixStr/: suffixDFA.cpp  suffixTree.cpp
songs/: beethoven.mid  musics_d_map08.mid:Zone.Identifier  shortSong.mid
testText/: nums.txt  prueba.txt
